--- a/pages/w0 template.html
+++ b/pages/w0 template.html
@@ -28,8 +28,11 @@
       <h1 class="week-title">Week 0</h1>
       <section class="week-content">
         <article class="article-item">
-          <h2>Reading</h2>
-          <p>Text here</p>
+          <h2 class="article-title">Reading notes</h2>
+          <h3 class="topic-title">TEMA</h3>
+          <p class="topic-body">
+            BODY ACA
+          </p>
         </article>
       </section> 
     </main>
