1st Attempt to fix links

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <a href="/" class="header-title">Readings</a>
         <nav class="navigation">
           <div class="week-nav-item-container" id="weekNavItemContainer">
-            <a class="week-nav-item" href="/" id="weekNavItem">All Weeks</a>
+            <a class="week-nav-item" href="#" id="weekNavItem">All Weeks</a>
             <ul class="nav-weeks-list" id="navWeeksList">
               <!-- Loaded with JS -->
             </ul>
