--- a/pages/w0 template.html
+++ b/pages/w0 template.html
@@ -5,10 +5,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="description"
-      content="Content learned in a week of WDD330"
-    />
+    <meta name="description" content="Content learned in a week of WDD330" />
+    <meta name="isWeekPage" content="1" />
 
     <!-- FONTS IMPORTS -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -19,22 +17,30 @@
     />
 
     <!-- STYLES -->
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="../../css/styles.css" />
 
-    <title>W0 - Readings</title>
+    <title>Week - Readings</title>
   </head>
   <body>
+    <!-- HEADER -->
+    <header class="main-header">
+      <div class="header-content container">
+        <a href="../../" class="header-title">Readings</a>
+      </div>
+    </header>
+
+    <!-- MAIN CONTENT -->
     <main class="container">
-      <h1 class="week-title">Week 0</h1>
+      <h1 class="week-title">Week 01</h1>
       <section class="week-content">
         <article class="article-item">
           <h2 class="article-title">Reading notes</h2>
-          <h3 class="topic-title">TEMA</h3>
+          <h3 class="topic-title">Topic Title</h3>
           <p class="topic-body">
-            BODY ACA
+            Article body
           </p>
         </article>
-      </section> 
+      </section>
     </main>
   </body>
 </html>
