--- a/pages/w01/index.html
+++ b/pages/w01/index.html
@@ -25,7 +25,7 @@
     <!-- HEADER -->
     <header class="main-header">
       <div class="header-content container">
-        <a href="/" class="header-title">Readings</a>
+        <a href="../../" class="header-title">Readings</a>
       </div>
     </header>
 
