--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <body>
     <header class="main-header">
       <div class="header-content container">
-        <a href="/" class="header-title">Readings</a>
+        <a href="#" class="header-title">Readings</a>
         <nav class="navigation">
           <div class="week-nav-item-container" id="weekNavItemContainer">
             <a class="week-nav-item" href="#" id="weekNavItem">All Weeks</a>
