fixed two links

--- a/404.html
+++ b/404.html
@@ -26,10 +26,10 @@
   <body>
     <header class="main-header">
       <div class="header-content container">
-        <a href="#" class="header-title">Readings</a>
+        <a href="https://santiagopintus.github.io/wdd330readings/" class="header-title">Readings</a>
         <nav class="navigation">
           <div class="week-nav-item-container" id="weekNavItemContainer">
-            <a class="week-nav-item" href="#" id="weekNavItem">All Weeks</a>
+            <a class="week-nav-item" href="https://santiagopintus.github.io/wdd330readings/" id="weekNavItem">All Weeks</a>
             <ul class="nav-weeks-list" id="navWeeksList">
               <!-- Loaded with JS -->
             </ul>
