Added W03 Readings and excercise. Added Dark mode :D

--- a/404.html
+++ b/404.html
@@ -23,7 +23,7 @@
 
     <title>Page not found | Readings</title>
   </head>
-  <body>
+  <body class="dark-mode">
     <header class="main-header">
       <div class="header-content container">
         <a href="https://santiagopintus.github.io/wdd330readings/" class="header-title">Readings</a>
