--- a/index.html
+++ b/index.html
@@ -23,10 +23,11 @@
 
     <title>WDD330 Readings</title>
   </head>
-  <body>
+  <body class="dark-mode">
     <header class="main-header">
       <div class="header-content container">
         <a href="https://santiagopintus.github.io/wdd330readings/" class="header-title">Readings</a>
+        <button class="theme-switch" id="themeSwitcher"><i id="switchIcon" class="moon"></i></button>
         <nav class="navigation">
           <div class="week-nav-item-container" id="weekNavItemContainer">
             <a class="week-nav-item" href="https://santiagopintus.github.io/wdd330readings/" id="weekNavItem">All Weeks</a>
@@ -46,5 +47,6 @@
     </main>
 
     <script src="js/main.js" type="module"></script>
+    <script src="js/darkMode.js" type="module"></script>
   </body>
 </html>
