--- a/pages/w01/index.html
+++ b/pages/w01/index.html
@@ -21,11 +21,12 @@
 
     <title>W01 - Readings</title>
   </head>
-  <body>
+  <body class="dark-mode">
     <!-- HEADER -->
     <header class="main-header">
       <div class="header-content container">
         <a href="../../" class="header-title">Readings</a>
+        <button class="theme-switch" id="themeSwitcher"><i id="switchIcon" class="moon"></i></button>
       </div>
     </header>
 
@@ -72,4 +73,7 @@
       </section>
     </main>
   </body>
+
+  <!-- Dark mode scripts -->
+  <script src="../../js/darkMode.js"></script>
 </html>
