--- a/pages/w0 template.html
+++ b/pages/w0 template.html
@@ -21,11 +21,12 @@
 
     <title>Week - Readings</title>
   </head>
-  <body>
+  <body class="dark-mode">
     <!-- HEADER -->
     <header class="main-header">
       <div class="header-content container">
         <a href="../../" class="header-title">Readings</a>
+        <button class="theme-switch" id="themeSwitcher"><i id="switchIcon" class="moon"></i></button>
       </div>
     </header>
 
