Fixed styles and js of 404 page

--- a/404.html
+++ b/404.html
@@ -19,7 +19,7 @@
     />
 
     <!-- STYLES -->
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="https://santiagopintus.github.io/wdd330readings/css/styles.min.css" />
 
     <title>Page not found | Readings</title>
   </head>
@@ -45,6 +45,6 @@
       </section>
     </main>
 
-    <script src="js/main.js" type="module"></script>
+    <script src="https://santiagopintus.github.io/wdd330readings/js/main.js" type="module"></script>
   </body>
 </html>
