Changed emoji in 404 page

--- a/404.html
+++ b/404.html
@@ -41,7 +41,7 @@
     <main class="weeks-section container">
       <section class="container-404">
         <h1 class="title-404">404</h1>
-        <h2>Ups! This is not what you are looking for... 😁</h2>
+        <h2>Ups! This is not what you are looking for... 🙈</h2>
       </section>
     </main>
 
