--- a/index.html
+++ b/index.html
@@ -26,11 +26,22 @@
   <body class="dark-mode">
     <header class="main-header">
       <div class="header-content container">
-        <a href="https://santiagopintus.github.io/wdd330readings/" class="header-title">Readings</a>
-        <button class="theme-switch" id="themeSwitcher"><i id="switchIcon" class="moon"></i></button>
+        <a
+          href="https://santiagopintus.github.io/wdd330readings/"
+          class="header-title"
+          >Readings</a
+        >
+        <button class="theme-switch" id="themeSwitcher">
+          <i id="switchIcon" class="moon"></i>
+        </button>
         <nav class="navigation">
           <div class="week-nav-item-container" id="weekNavItemContainer">
-            <a class="week-nav-item" href="https://santiagopintus.github.io/wdd330readings/" id="weekNavItem">All Weeks</a>
+            <a
+              class="week-nav-item"
+              href="https://santiagopintus.github.io/wdd330readings/"
+              id="weekNavItem"
+              >All Weeks</a
+            >
             <ul class="nav-weeks-list" id="navWeeksList">
               <!-- Loaded with JS -->
             </ul>
